2011-05-24  Manuel Koller  <koller@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.7-6

	* inst/doc/lmrob_simulation.Rnw: cleaned up chunk headers.

	* inst/doc/Makefile: added Makefile that runs qpdf after texi2pdf.

2011-05-23  Manuel Koller  <koller@stat.math.ethz.ch>

	* DESCRIPTION (Version, Date): 0.7-5

	* man/lmrob..D..fit.Rd: updated reference to Koller and Stahel
	2011 (now with volume, issue and page numbers).
	* man/lmrob.control.Rd: updated reference.
	* man/lmrob.Rd: update reference.
	* inst/doc/lmrob_simulation.bib: updated reference.

	* inst/doc/estimating.functions.R (robustness.weights.lmrob.S):
	fixed typo.

2011-03-17  Manuel Koller  <koller@stat.math.ethz.ch>

	* DESCRIPTION (Version, Date): 0.7-4

	* inst/doc/lmrob_simulation.Rnw: Fixed problem with paths in
	source(), save() and load().

2011-03-08  Manuel Koller  <koller@stat.math.ethz.ch>

	* DESCRIPTION (Version, Suggests): 0.7-3 and added xtable and
	ggplot2 to Suggests.

	* inst/doc/lmrob_simulation.Rnw: re- or moved dependencies that are
	not required or just needed for data generation.

	* inst/doc/error.distributions.R: removed dependency on skewt.

2011-02-10  Manuel Koller  <koller@stat.math.ethz.ch>

	* DESCRIPTION (Version): Version: 0.7-2

	* inst/doc/lmrob_simulation.Rnw: updated title.
	* inst/doc/lmrob_simulation.bib: updated references.
	* man/lmrob.control.Rd: as above.
	* man/lmrob.Rd: as above.

2011-01-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/glmrobMqle.R (Huberprop2, ...),
	* R/psi-rho-funs.R (huberPsi): replace pmin2/pmax2 by
	pmin.int()/pmax.int().

2011-01-26  Manuel Koller  <koller@stat.math.ethz.ch>

	* R/psi-rho-funs.R (psiFunc, chgDefaults): default arguments are
	now also set for the E... slots
	* tests/psi-rho-etc.R: updated comments
	* tests/psi-rho-etc.Rout.save: updated accordingly

2011-01-20  Manuel Koller  <koller@stat.math.ethz.ch>

	Updated reference to Koller and Stahel 2011 paper.
