@@ -1,3 +1,12 @@
+2011-08-09  Manuel Koller  <koller@stat.math.ethz.ch>
+
+	* R/plot.lmrob.R (plot.lmrob): Fixing bug reported by Andreas
+	Papritz. is.null(x$x) is always FALSE since there is always
+	x$xlevels present.
+
+	* inst/doc/lmrob_simulation.Rnw (f.gen): load(file) was missing the
+	proper path.
+
 2011-05-24  Manuel Koller  <koller@stat.math.ethz.ch>
 
 	* DESCRIPTION (Version): 0.7-6
